--- a/css/github.css
+++ b/css/github.css
@@ -205,21 +205,6 @@ pre > code {
   font-size: 13.6px;
 }
 
-/* 滚动条 */
-/* ::-webkit-scrollbar {
-  width: 16px;
-  height: 8px;
-}
-::-webkit-scrollbar-thumb {
-  background: #b3b3b3;
-  border-radius: 3px;
-}
-::-webkit-scrollbar-track {
-  background: #edeaea;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: rgb(110, 110, 110);
-} */
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -274,7 +259,9 @@ pre > code {
 }
 #sidebar li:hover {
   background-color: #e2e2e3;
-  text-decoration-line: underline;
+}
+#sidebar li:hover div{
+  text-decoration: underline;
 }
 #toc li:hover {
   text-decoration-line: underline;
