--- a/css/github.css
+++ b/css/github.css
@@ -260,7 +260,7 @@ pre > code {
 #sidebar li:hover {
   background-color: #e2e2e3;
 }
-#sidebar li:hover div{
+#sidebar li:hover div {
   text-decoration: underline;
 }
 #toc li:hover {
@@ -283,4 +283,52 @@ pre > code {
   margin: 0 auto;
   padding-bottom: 2rem;
   font-size: 0.9rem;
+}
+
+/* 侧边栏的样式 */
+* {
+  box-sizing: border-box;
+}
+/* 回到顶部的样式 */
+.top {
+  z-index: 1000;
+  position: fixed;
+  right: 60px;
+  bottom: 14%;
+  border: none;
+  box-shadow: 0px 1px 6px 2px #bbb2b2;
+  padding: 0.5rem;
+  border-radius: 6px;
+  opacity: 0.8;
+}
+
+.top-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 1rem;
+}
+.top-clicked {
+  border-bottom: solid 4px gray;
+  font-weight: bolder;
+}
+.top-buttons-ele {
+  padding: 0 1.5rem;
+}
+
+.icon-folder {
+  font-size: 19px;
+  color: #a2a0a0;
+  padding: 0px 3px 0px 0px;
+}
+.icon-folder2 {
+  color: #a5a5a5;
+  padding: 0px 3px 0px 0px;
+}
+.icon-file {
+  font-size: 18px;
+  color: #888787;
+  padding: 0px 3px 0px 0px;
+}
+#top-file a {
+  display: flex;
 }
